responsive home, icon-technologies

--- a/src/pug/component/project.pug
+++ b/src/pug/component/project.pug
@@ -1,15 +1,15 @@
 -var imageSrc = './img/project/'
 -var formatJpg = '.jpg'
 mixin card-project(title,image)
-    .card-project 
+    a(href="index.html").card-project 
         .card-project__image
             img(src=`${imageSrc}${image}${formatJpg}`, alt="none")
         .card-project__info
-            a(href="#").card-project--title #{title}
+            h1.card-project--title #{title}
 
 section.section-main.section-project
     h1.section-main-title Projects
     .project-container
-        +card-project('Mercado Libre Home', '1')
+        +card-project('Mercado Libre Home', 'mercadolibre')
         +card-project('bla', '1')
         +card-project('yggg yggg', '1')
