--- a/src/scss/base/_size.scss
+++ b/src/scss/base/_size.scss
@@ -31,3 +31,6 @@ $block-size-card-song: 80px;
 $thumbnail-size: 60px;
 
 $height-blog-entry: 125px;
+
+$icon-tech-container: 90px;
+$icon-tech-size: 60px;
