--- a/src/scss/component/_main.scss
+++ b/src/scss/component/_main.scss
@@ -29,7 +29,7 @@
     flex-direction: column;
 
     inline-size: 100%;
-    block-size: 100vh;
+    min-block-size: 100vh;
     padding-block-start: var.$height-nav;
     padding-inline: var.$margin-grid-mobile;
 
@@ -51,14 +51,16 @@
 .subsection-skill {
     inline-size: 100%;
     block-size: 100%;
-    @include var.breakpoint(var.$breakpoint-tablet) {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-    };
+    display: grid;
+     @include var.breakpoint(var.$breakpoint-desktop) {
+        grid-template-columns: repeat(2, 1fr)
+    }; 
 }
 .subsection-1-skill {
     place-self: center;
+    display: flex;
+    flex-direction: column;
+    place-items: center;
 }
 .subsection-2-skill {
     inline-size: 100%;
@@ -68,10 +70,23 @@
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 100px;
     inline-size: 100%;
+    row-gap: var.$gutter-grid-mobile;
     place-items: center;
 }
-.icon {
-    inline-size: 80px;
-    block-size: 80px;
-    background-color: papayawhip;
+.icon-tech-container {
+    inline-size: var.$icon-tech-container;
+    block-size: var.$icon-tech-container;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.icon-tech-title {
+    font-size: 14px;
+    color: white;
+    text-align: center;
+    margin-block-end: var.$spacing-small;
+}
+.icon-tech {
+    inline-size: var.$icon-tech-size;
+    block-size: var.$icon-tech-size;
 }
