blog y post responsive

--- a/src/scss/base/_grid.scss
+++ b/src/scss/base/_grid.scss
@@ -1,4 +1,5 @@
 @use 'size';
+@use 'breakpoint';
 
 %template-columns-mobile-1 {
     grid-template-columns: repeat(4, 4fr);
@@ -15,4 +16,10 @@
     min-block-size: 100vh;
     padding-block-start: size.$height-nav;
     padding-inline: size.$margin-grid-mobile;
+    @include breakpoint.breakpoint(breakpoint.$breakpoint-tablet) {
+        padding-inline: size.$margin-grid-tablet;
+    }
+    @include breakpoint.breakpoint(breakpoint.$breakpoint-desktop) {
+        padding-inline: size.$margin-grid-desktop;
+    }
 }
