--- a/src/scss/component/_blog.scss
+++ b/src/scss/component/_blog.scss
@@ -8,21 +8,38 @@
 }
 .blog-entry {
     @extend %style-none;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    display: grid;
+
     inline-size: 100%;
     block-size: var.$height-blog-entry;
     margin-block-end: var.$spacing-medium;
+    @include var.breakpoint(var.$breakpoint-tablet) {
+        min-block-size: var.$height-blog-entry * 2;
+        grid-template-columns: var.$minmax-grid-column-blog 1fr;
+        grid-template-rows: var.$height-row-blog-entry-tablet;   
+    }
 }
 .blog-title{
     @extend %blog-title;
+    @include var.breakpoint(var.$breakpoint-tablet) {
+        grid-column: 2 / 3;
+    }
 }
 .blog-extract {
     @extend %blog-extract;
     text-align: center;
+    @include var.breakpoint(var.$breakpoint-tablet) {
+        grid-column: 2 / 3;
+        text-align: start;
+    }
 }
 .blog-date {
     @extend %blog-date;
     text-align: right;
+    @include var.breakpoint(var.$breakpoint-tablet) {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+        text-align: center;
+        align-self: center;
+    }
 }
