--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,7 +1,9 @@
 extend ./component/index-template.pug
-block style
-    +head
+block meta
+    +head('Ariel Soto')
 block content
     include ./component/main.pug
     include ./component/skill.pug
     include ./component/project.pug
+block script
+    +script('./index.js')
