--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -1,5 +1,5 @@
 extend ./component/index-template.pug
-block style
+block meta
     +head('About')
 block content
     .section-main.section-about
@@ -7,3 +7,5 @@ block content
         p.section-main-text I define my self as an multidementional artist: Musician, Producer, Guitarrist, Bassits, Singer, Mixing and Master engineer. Photographer, filmaker, editor, colorist.
         p.section-main-text love the digital world. found that Web Development is one of the most exciting world. The best combination of art and technical side. 
     .about-galery
+block script
+    +script('./index.js')
