--- a/src/pug/audiovisual.pug
+++ b/src/pug/audiovisual.pug
@@ -1,9 +1,11 @@
 extend ./component/index-template.pug
-block style
-    +head
+block meta
+    +head('Audiovisual')
 block content 
     -var n = 1
     section.section-audiovisual
         while n < 23
             .img-container 
                 img(src=`./img/quickgalery/quickgaleryimages-${n++}.jpg`, alt="social photgraphy")
+block script
+    +script('./index.js')
