--- a/src/scss/component/_audiovisual.scss
+++ b/src/scss/component/_audiovisual.scss
@@ -1,9 +1,17 @@
+@use '../base/var';
 .section-audiovisual {
     display: grid;
     grid-template-columns: 1fr;
-    column-gap: 8px;
-
+    column-gap: var.$column-gap-galery;
+    row-gap: var.$row-gap-galery;
     inline-size: 100%;
+
+    @include var.breakpoint(var.$breakpoint-tablet) {
+        grid-template-columns: repeat(2, 1fr);    
+    }
+    @include var.breakpoint(var.$breakpoint-desktop) {
+        grid-template-columns: repeat(3, 1fr);    
+    }
 }
 .img-container {
     inline-size: 100%;
