--- a/src/scss/component/_music.scss
+++ b/src/scss/component/_music.scss
@@ -2,7 +2,17 @@
 
 .music {
     block-size: 100%;
-    inline-size: 100%;
+    min-inline-size: 100vh;
+    @include var.breakpoint(var.$breakpoint-tablet) {
+        padding-block-start: var.$height-nav;
+        padding-inline: var.$margin-grid-tablet;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+
+    }
+    @include var.breakpoint(var.$breakpoint-desktop) {
+        padding-inline: var.$margin-grid-desktop;
+    }
 }
 .music-hero {
     display: grid;
@@ -10,23 +20,45 @@
 
     block-size: var.$block-size-music-hero;
     inline-size: 100%;
-
+    
     background-image: url(../../../img/music/portada.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;    
+
 }
 .music-hero-title {
     grid-column: 2 / 5;
     grid-row: 6 / 7;
     place-self: center;
+    @include var.breakpoint(var.$breakpoint-tablet) {
+        display: none;
+    }
 }
-.music-list {
+.music-songs {
     padding-block-start: var.$spacing-medium;
     padding-inline: var.$margin-grid-mobile;
+    @include var.breakpoint(var.$breakpoint-tablet) {
+        block-size: var.$block-size-music-hero;
+    }
+    overflow: hidden;
+
+}
+.music-list {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: var.$row-gap-galery;
+    block-size: 100%;
+    overflow: scroll;
+
 }
 .music-title {
     display: none;
+    @include var.breakpoint(var.$breakpoint-tablet) {
+        display: block;
+        text-align: center;
+        margin-block-end: var.$spacing-medium;
+    }
 }
 .card-song {
     display: grid;
