--- a/src/pug/blog/post.pug
+++ b/src/pug/blog/post.pug
@@ -2,7 +2,7 @@ extend ../component/index-template.pug
 block meta
     +head('Post', '../style.css')
 block content
-    section.section.post 
+    section.section-post.post 
         span.post-date 01 Ene 2021
         h1.post-title Title
         p.post-extract Lorem ipsum dolor sit amet consectetur adipisicing elit.
