--- a/src/pug/component/index-template.pug
+++ b/src/pug/component/index-template.pug
@@ -1,3 +1,4 @@
+-var absoluteUrl = 'https://www.arielestebansoto.com'
 mixin head(title="Ariel Soto",url="./style.css")
     title=  title
     link(rel="stylesheet", href= url)
