--- a/src/pug/component/skill.pug
+++ b/src/pug/component/skill.pug
@@ -1,4 +1,4 @@
-section.section-main.section-skill
+section.section-skill
     h1.section-main-title Skills
     .subsection-skill
         .subsection-1-skill
