--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,4 +6,4 @@ block content
     include ./component/skill.pug
     include ./component/project.pug
 block script
-    +script('./index.js')
+    +script('/index.js')
