--- a/src/scss/component/_post.scss
+++ b/src/scss/component/_post.scss
@@ -1,5 +1,7 @@
 @use '../base/var';
-
+.section-post {
+    @extend %section;
+}
 .post {
     @include var.breakpoint(var.$breakpoint-tablet) {
         display: grid;
