--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 @use 'component/project-card';
 @use 'component/menu';
 @use 'component/music';
+@use 'component/about';
 @use 'component/blog';
 @use 'component/post';
 @use 'component/audiovisual';
