--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -2,7 +2,7 @@ extend ./component/index-template.pug
 block meta
     +head('About')
 block content
-    .section-main.section-about
+    .section-about
         h1.section-main-title About
         p.section-main-text I define my self as an multidementional artist: Musician, Producer, Guitarrist, Bassits, Singer, Mixing and Master engineer. Photographer, filmaker, editor, colorist.
         p.section-main-text love the digital world. found that Web Development is one of the most exciting world. The best combination of art and technical side. 
