--- a/src/pug/component/project.pug
+++ b/src/pug/component/project.pug
@@ -6,10 +6,10 @@ mixin card-project(title,image)
             img(src=`${imageSrc}${image}${formatJpg}`, alt="none")
         .card-project__info
             h1.card-project--title #{title}
+        .card-project-hover
 
-section.section-main.section-project
+section.section-project
     h1.section-main-title Projects
     .project-container
         +card-project('Mercado Libre Home', 'mercadolibre')
-        +card-project('bla', '1')
-        +card-project('yggg yggg', '1')
+
