--- a/style.css
+++ b/style.css
@@ -246,19 +246,19 @@
   row-gap: 32px;
 }
 
-.section {
+.section-post, .section-blog, .section-about, .section-project, .section-skill {
   inline-size: 100%;
   min-block-size: 100vh;
   padding-block-start: 72px;
   padding-inline: 32px;
 }
 @media only screen and (min-width: 768px) {
-  .section {
+  .section-post, .section-blog, .section-about, .section-project, .section-skill {
     padding-inline: 48px;
   }
 }
 @media only screen and (min-width: 1024px) {
-  .section {
+  .section-post, .section-blog, .section-about, .section-project, .section-skill {
     padding-inline: 64px;
   }
 }
@@ -379,16 +379,17 @@
   color: #ffffff;
 }
 
-.section-main {
-  display: flex;
-  flex-direction: column;
-  inline-size: 100%;
-  min-block-size: 100vh;
-  padding-block-start: 72px;
-  padding-inline: 32px;
-  background-color: #1d1d1d;
-}
+/* .section-main {
+    display: flex;
+    flex-direction: column;
 
+    inline-size: 100%;
+    min-block-size: 100vh;
+    padding-block-start: var.$height-nav;
+    padding-inline: var.$margin-grid-mobile;
+
+    background-color: var.$color-dark;
+} */
 .section-main-title {
   margin-block-end: 24px;
 }
@@ -474,12 +475,29 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  position: relative;
   inline-size: 100%;
 }
 @media only screen and (min-width: 768px) {
   .card-project {
     flex-direction: column;
   }
+}
+
+.card-project-hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  block-size: 100%;
+  inline-size: 100%;
+  background-color: rgba(0, 0, 0, 0);
+  transition: background-color 0.2s ease-in;
+}
+
+.card-project:hover > .card-project-hover {
+  background-color: rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 .card-project__image {
@@ -605,8 +623,8 @@
 }
 
 .music {
-  block-size: 100%;
-  min-inline-size: 100vh;
+  inline-size: 100%;
+  min-block-size: 100vh;
 }
 @media only screen and (min-width: 768px) {
   .music {
