--- a/src/pug/component/index-template.pug
+++ b/src/pug/component/index-template.pug
@@ -10,7 +10,6 @@ html(lang="en")
     include ./head.pug
         block meta
     body.body
-        include ./nav
-        include ./menu 
+        block nav-menu
         block content
         block script
