--- a/src/html/component/nav.html
+++ b/src/html/component/nav.html
@@ -1,6 +1,6 @@
 
 <header class="nav"> 
-  <div class="nav-icon"><a href="./index.html"> a</a></div>
+  <div class="nav-icon"><a href="/index.html"> a</a></div>
   <div class="nav-section"></div>
   <div class="nav-menu">
     <input type="checkbox" name="hamburgermenu" id="checkbox"/><span>menu</span><span>close</span>
