--- a/src/pug/audiovisual.pug
+++ b/src/pug/audiovisual.pug
@@ -1,6 +1,9 @@
 extend ./component/index-template.pug
 block meta
     +head('Audiovisual')
+block nav-menu 
+    include ./component/menu.pug
+    include ./component/nav.pug
 block content 
     -var n = 1
     section.section-audiovisual
@@ -8,4 +11,4 @@ block content
             .img-container 
                 img(src=`./img/quickgalery/quickgaleryimages-${n++}.jpg`, alt="social photgraphy")
 block script
-    +script('./index.js')
+    +script('/index.js', 'module')
