--- a/src/pug/blog.pug
+++ b/src/pug/blog.pug
@@ -6,9 +6,13 @@ mixin blog-entry
         span.blog-date 1 Ene 2021.
 block meta
     +head('Blog')
+    block nav-menu
+    include ./component/menu.pug
+    include ./component/nav.pug
 block content
     section.section-blog
         h1.section-main-title Blog
         .blog-entries
+            +blog-entry
 block script 
-    +script('/index.js')
+    +script('/index.js', 'module')
