--- a/src/pug/blog/post.pug
+++ b/src/pug/blog/post.pug
@@ -3,7 +3,7 @@ block meta
     +head('Post', '../style.css')
 block nav-menu
     include  ../component/menu.pug
-    my-header(link-home="/../index.html")
+    include ../component/nav.pug
 block content
     section.section-post.post 
         span.post-date 01 Ene 2021
@@ -12,4 +12,4 @@ block content
         p.post-text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, labore ut harum voluptatum officia fugit, veritatis ab modi eum consequuntur porro quos repellat optio molestiae explicabo maiores dicta pariatur. Ipsa.
         p.post-text Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, ipsum consectetur incidunt assumenda, aliquam et illo eveniet deleniti a nesciunt laboriosam. Dolor obcaecati doloribus, blanditiis aliquam vitae quos cum beatae!
 block script
-    +script('/wc.js', 'module')
+    +script('/index.js', 'module')
