--- a/src/pug/component/nav.pug
+++ b/src/pug/component/nav.pug
@@ -1,7 +1,7 @@
 -var url = 'https://www.arielestebansoto.com'
 header.nav 
     .nav-icon
-        a(href="./index.html")  a
+        a(href="/index.html")  a
     .nav-section
     .nav-menu
         input(type="checkbox", name="hamburgermenu", id="checkbox")
