--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@
   }
 }
 
-.contact-me span, .post-text {
+.contact-me span, .section-main-text, .post-text {
   color: #ffffff;
   font-size: 16px;
   letter-spacing: 0.5px;
@@ -119,11 +119,11 @@
   font-weight: 400;
 }
 @media only screen and (min-width: 768px) {
-  .contact-me span, .post-text {
+  .contact-me span, .section-main-text, .post-text {
     color: #ffffff;
-    font-size: 16px;
+    font-size: 18px;
     letter-spacing: 0px;
-    line-height: 22.4px;
+    line-height: 25.2px;
     font-weight: 400;
   }
 }
@@ -430,9 +430,10 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 100px;
-  inline-size: 100%;
   row-gap: 32px;
   place-items: center;
+  inline-size: 100%;
+  margin-block-end: 24px;
 }
 
 .icon-tech-container {
@@ -452,7 +453,7 @@
 
 .icon-tech {
   inline-size: 60px;
-  block-size: 60px;
+  block-size: auto;
 }
 
 .project-container {
