project is deployed

--- a/src/html/component/project.html
+++ b/src/html/component/project.html
@@ -1,12 +1,11 @@
 
-<section class="section-main section-project">
+<section class="section-project">
   <h1 class="section-main-title">Projects</h1>
   <div class="project-container">
     <div class="card-project"> 
-      <div class="card-project__image"><img src="/" alt="none"/></div>
-      <div class="card-project__info">
-        <h1 class="card-project--title">TITLE</h1>
-      </div>
+      <div class="card-project__image"><img src="./img/project/mercadolibre.jpg" alt="project-image"/></div>
+      <div class="card-project__info"><a class="card-project--title">Mercado Libre Home</a></div>
+      <div class="card-project-hover"></div>
     </div>
   </div>
 </section>
