--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -73,7 +73,7 @@ $font-size-button: 14px;
 $letter-spacing-button: 1.25px;
 $line-height-button: $font-size-button * $line-height;
 $font-weight-button: $medium;
-$text-transform-button: 'uppercase';
+$text-transform-button: "uppercase";
 
 $font-size-button-desktop: 32px;
 $letter-spacing-button-desktop: 1.25px;
