--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@
   }
 }
 
-.card-project__info h1 {
+.card-project--title {
   color: #ffffff;
   font-size: 16px;
   letter-spacing: 0.15px;
@@ -153,7 +153,7 @@
   font-weight: 500;
 }
 @media only screen and (min-width: 768px) {
-  .card-project__info h1 {
+  .card-project--title {
     color: #ffffff;
     font-size: 20px;
     letter-spacing: 0.1px;
@@ -246,19 +246,19 @@
   row-gap: 32px;
 }
 
-.section-post, .section-blog, .section-about, .section-project, .section-skill {
+.section-project, .section-post, .section-blog, .section-about, .section-skill {
   inline-size: 100%;
   min-block-size: 100vh;
   padding-block-start: 72px;
   padding-inline: 32px;
 }
 @media only screen and (min-width: 768px) {
-  .section-post, .section-blog, .section-about, .section-project, .section-skill {
+  .section-project, .section-post, .section-blog, .section-about, .section-skill {
     padding-inline: 48px;
   }
 }
 @media only screen and (min-width: 1024px) {
-  .section-post, .section-blog, .section-about, .section-project, .section-skill {
+  .section-project, .section-post, .section-blog, .section-about, .section-skill {
     padding-inline: 64px;
   }
 }
@@ -271,7 +271,7 @@
   color: #ffffff;
 }
 
-.blog-entry, .menu-link, .about a, .contact-me a, .card-project, .nav-icon a {
+.card-project--title, .blog-entry, .menu-link, .about a, .contact-me a, .nav-icon a {
   text-decoration: none;
 }
 
@@ -454,86 +454,6 @@
 .icon-tech {
   inline-size: 60px;
   block-size: auto;
-}
-
-.project-container {
-  display: grid;
-  row-gap: 24px;
-}
-@media only screen and (min-width: 768px) {
-  .project-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media only screen and (min-width: 1024px) {
-  .project-container {
-    grid-template-columns: repeat(3, 1fr);
-    row-gap: 48px;
-  }
-}
-
-.card-project {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  position: relative;
-  inline-size: 100%;
-}
-@media only screen and (min-width: 768px) {
-  .card-project {
-    flex-direction: column;
-  }
-}
-
-.card-project-hover {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  block-size: 100%;
-  inline-size: 100%;
-  background-color: rgba(0, 0, 0, 0);
-  transition: background-color 0.2s ease-in;
-}
-
-.card-project:hover > .card-project-hover {
-  background-color: rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-}
-
-.card-project__image {
-  min-block-size: 82px;
-  min-inline-size: 125px;
-  inline-size: 50%;
-  block-size: 100%;
-}
-@media only screen and (min-width: 768px) {
-  .card-project__image {
-    inline-size: 80%;
-  }
-}
-
-.card-project__image img {
-  block-size: 100%;
-  inline-size: 100%;
-  object-fit: cover;
-}
-
-.card-project__info {
-  display: flex;
-  flex-direction: column;
-  place-items: center;
-  inline-size: 50%;
-}
-@media only screen and (min-width: 768px) {
-  .card-project__info {
-    margin-block: 24px;
-    inline-size: 100%;
-  }
-}
-
-.card-project__info h1 {
-  text-align: center;
 }
 
 .menu {
@@ -865,5 +785,70 @@
 .img-container img {
   inline-size: 100%;
   block-size: auto;
+  object-fit: cover;
+}
+
+.project-container {
+  display: grid;
+  row-gap: 24px;
+  justify-content: center;
+}
+@media only screen and (min-width: 768px) {
+  .project-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .project-container {
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 48px;
+  }
+}
+
+.card-project {
+  inline-size: 300px;
+  block-size: 240px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.card--info {
+  position: absolute;
+  z-index: 100;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.card-project--title {
+  margin-block-end: 12px;
+}
+
+.card-project__info--about {
+  font-weight: lighter;
+  font-size: 14px;
+  margin-block-end: 12px;
+}
+
+.card-project-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 50;
+  block-size: 100%;
+  inline-size: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.card-project img {
+  min-block-size: 240px;
+  min-inline-size: 300px;
+  inline-size: auto;
+  block-size: 100%;
   object-fit: cover;
 }
