--- a/src/pug/component/project.pug
+++ b/src/pug/component/project.pug
@@ -1,15 +1,13 @@
--var imageSrc = './img/project/'
--var formatJpg = '.jpg'
-mixin card-project(title,image)
-    a(href="index.html").card-project 
-        .card-project__image
-            img(src=`${imageSrc}${image}${formatJpg}`, alt="none")
-        .card-project__info
-            h1.card-project--title #{title}
-        .card-project-hover
+mixin card-project(title, image, projectUrl)
+    .card-project
+        img(src=`/img/project/${image}.jpg` alt='project image')
+        .card--info
+            a(href=`${projectUrl}`).card-project--title #{title} 
+            span.card-project__info--about about the project
+        .card-project-overlay 
 
 section.section-project
     h1.section-main-title Projects
     .project-container
-        +card-project('Mercado Libre Home', 'mercadolibre')
-
+        +card-project('arielestebansoto.com', '1', '/index.html')
+        +card-project('Mercado Libre Home', 'mercadolibre', '/projects/mercado-libre-home/index.html')
