--- a/src/scss/component/_project-card.scss
+++ b/src/scss/component/_project-card.scss
@@ -1,72 +1,66 @@
 @use '../base/var';
 .section-project {
-    @extend %section;
+  @extend %section;
 }
 .project-container {
-    display: grid;
-    row-gap: var.$spacing-medium;
-    @include var.breakpoint(var.$breakpoint-tablet) {
-        grid-template-columns: repeat(2, 1fr);
-    }
-    @include var.breakpoint(var.$breakpoint-desktop) {
-        grid-template-columns: repeat(3, 1fr);
-        row-gap: var.$spacing-big;
-    }
+  display: grid;
+  row-gap: var.$spacing-medium;
+  justify-content: center;
+  @include var.breakpoint(var.$breakpoint-tablet) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @include var.breakpoint(var.$breakpoint-desktop) {
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: var.$spacing-big;
+  }
 }
 .card-project {
-    @extend %style-none;
+  inline-size: var.$card-inline-size;
+  block-size: var.$card-block-size;
 
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    position: relative;
-    inline-size: 100%;
+  position: relative;
+  overflow: hidden;
+}
+.card--info {
+  position: absolute;
+  z-index: 100;
+  top: 50%;
+  transform: translateY(-50%);
 
-    @include  var.breakpoint(var.$breakpoint-tablet) {
-        flex-direction: column;
-    }
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
-.card-project-hover {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 100;
+.card-project--title {
+  @extend %style-none;
+  @extend %card-title;
+  margin-block-end: var.$spacing-small;
+}
+.card-project__info--about {
+  font-weight: lighter;
+  font-size: 14px;
+  margin-block-end: var.$spacing-small;
+}
+.card-project-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 50;
 
-    block-size: 100%;
-    inline-size: 100%;
-    background-color: rgba(0, 0, 0, 0);
-    transition: background-color 0.2s ease-in;
+  block-size: 100%;
+  inline-size: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
 }
-.card-project:hover > .card-project-hover  {
-    background-color: rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-}
-.card-project__image {
-    min-block-size: var.$card-block-size;
-    min-inline-size: var.$card-inline-size;
-    inline-size: 50%;
-    block-size: 100%;
-    @include var.breakpoint(var.$breakpoint-tablet) {
-        inline-size: 80%
-    }
-}
-.card-project__image img {
-    block-size: 100%;
-    inline-size: 100%;
-    object-fit: cover;
-}
-.card-project__info {
-    display: flex;
-    flex-direction: column;
-    place-items: center;
-    inline-size: 50%;
-    @include var.breakpoint(var.$breakpoint-tablet) {
-        margin-block: var.$spacing-medium;
-        inline-size: 100%;
-    }
-}
-.card-project__info h1 {
-    @extend %card-title;
-    text-align: center;
+
+.card-project img {
+  min-block-size: var.$card-block-size;
+  min-inline-size: var.$card-inline-size;
+  inline-size: auto;
+  block-size: 100%;
+
+  object-fit: cover;
 }
