--- a/src/pug/component/project.pug
+++ b/src/pug/component/project.pug
@@ -1,4 +1,8 @@
 mixin card-project(title, image, projectUrl)
+    .modal
+        .modal-content
+            h1 #{title}
+            p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
     .card-project
         img(src=`/img/project/${image}.jpg` alt='project image')
         .card--info
