--- a/src/scss/base/_breakpoint.scss
+++ b/src/scss/base/_breakpoint.scss
@@ -1,5 +1,6 @@
-$breakpoint-tablet: 768px;
-$breakpoint-desktop: 1024px;
+$breakpoint-tablet: 600px;
+$breakpoint-desktop: 992px;
+$breakpoint-desktop-large: 1200px;
 
 @mixin breakpoint($width) {
     @media only screen and (min-width: $width) {
