--- a/src/scss/component/_about.scss
+++ b/src/scss/component/_about.scss
@@ -1,4 +1,9 @@
 @use '../base/var';
 .section-about {
     @extend %section;
+    padding-block-start: var.$height-nav;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
