--- a/src/scss/component/_main.scss
+++ b/src/scss/component/_main.scss
@@ -1,13 +1,18 @@
 @use './base/var';
-.main {
-    display: grid;
-    @extend %template-columns-mobile-1;
-    @extend %template-rows-mobile-hero;
-    position: relative;
-    inline-size: 100%;
-    block-size: 100vh;
 
-    background-color: var.$color-dark;
+.main {
+    @extend %section;
+     display: grid;
+     grid-template-columns: repeat(4, 4fr);
+     padding-inline: var.$margin-grid-mobile;
+     column-gap: var.$gutter-grid-mobile;
+     grid-template-rows: repeat(7, 1fr);
+     padding-block-start: var.$height-nav;
+     row-gap: var.$gutter-grid-mobile;
+     position: relative;
+ 
+    min-block-size: 100vh;
+
 }
 .main-subtitle {
     grid-column: 1 / 3;
@@ -23,76 +28,4 @@
 .main-title h1 {
     @extend %hero;
     color: var.$color-font-white
-}
-/* .section-main {
-    display: flex;
-    flex-direction: column;
-
-    inline-size: 100%;
-    min-block-size: 100vh;
-    padding-block-start: var.$height-nav;
-    padding-inline: var.$margin-grid-mobile;
-
-    background-color: var.$color-dark;
-} */
-.section-skill {
-    @extend %section;
-}
-.section-main-title {
-    @extend %section-title;
-    margin-block-end: var.$spacing-medium;
-}
-.section-main-text {
-    @extend %text;
-    inline-size: 250px;
-    align-self: center;
-    margin-block-end: var.$spacing-big;
-}
-.section-main-subtitle {
-    @extend %section-subtitle;
-    margin-block-end: var.$spacing-medium;
-}
-.subsection-skill {
-    inline-size: 100%;
-    block-size: 100%;
-    display: grid;
-     @include var.breakpoint(var.$breakpoint-desktop) {
-        grid-template-columns: repeat(2, 1fr)
-    }; 
-}
-.subsection-1-skill {
-    place-self: center;
-    display: flex;
-    flex-direction: column;
-    place-items: center;
-}
-.subsection-2-skill {
-    inline-size: 100%;
-}
-.skill-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 100px;
-    row-gap: var.$gutter-grid-mobile;
-    place-items: center;
-
-    inline-size: 100%;
-    margin-block-end: var.$spacing-medium;
-}
-.icon-tech-container {
-    inline-size: var.$icon-tech-container;
-    block-size: var.$icon-tech-container;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.icon-tech-title {
-    font-size: 14px;
-    color: white;
-    text-align: center;
-    margin-block-end: var.$spacing-small;
-}
-.icon-tech {
-    inline-size: var.$icon-tech-size;
-    block-size: auto;
 }
