--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   font-weight: 100;
   font-weight: 600;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .main-title h1 {
     color: #ffffff;
     font-size: 98px;
@@ -27,7 +27,7 @@
   font-weight: 400;
   font-weight: 600;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .main-subtitle h1 {
     color: #ffffff;
     font-size: 48px;
@@ -46,7 +46,7 @@
   font-weight: 400;
   font-weight: 600;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .menu-link {
     color: #ffffff;
     font-size: 48px;
@@ -65,7 +65,7 @@
   font-weight: 400;
   font-weight: 600;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .about a {
     color: #ffffff;
     font-size: 48px;
@@ -83,7 +83,7 @@
   font-weight: 400;
   font-weight: 600;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .section-main-title {
     color: #ffffff;
     font-size: 60px;
@@ -101,7 +101,7 @@
   line-height: 33.6px;
   font-weight: 400;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .section-main-subtitle {
     color: #ffffff;
     font-size: 48px;
@@ -118,7 +118,7 @@
   line-height: 22.4px;
   font-weight: 400;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .contact-me span, .section-main-text, .post-text {
     color: #ffffff;
     font-size: 18px;
@@ -135,7 +135,7 @@
   line-height: 19.6px;
   font-weight: 500;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .contact-me a {
     color: #ffffff;
     font-size: 32px;
@@ -152,7 +152,7 @@
   line-height: 22.4px;
   font-weight: 500;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .card-project--title {
     color: #ffffff;
     font-size: 20px;
@@ -169,7 +169,7 @@
   line-height: 28px;
   font-weight: 500;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .post-title, .blog-title {
     color: #ffffff;
     font-size: 48px;
@@ -186,7 +186,7 @@
   line-height: 19.6px;
   font-weight: 400;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .post-date, .blog-date {
     color: #ffffff;
     font-size: 20px;
@@ -203,7 +203,7 @@
   line-height: 22.4px;
   font-weight: 500;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .post-extract, .blog-extract {
     color: #ffffff;
     font-size: 24px;
@@ -234,32 +234,17 @@
   src: url(./font/Ubuntu-Bold.ttf);
   font-weight: 600;
 }
-.main, .nav {
-  grid-template-columns: repeat(4, 4fr);
-  padding-inline: 32px;
-  column-gap: 32px;
+.section-post, .section-blog, .section-project, .section-about, .section-skill, .main, .nav {
+  inline-size: 90%;
 }
-
-.main {
-  grid-template-rows: repeat(7, 1fr);
-  padding-block-start: 72px;
-  row-gap: 32px;
-}
-
-.section-project, .section-post, .section-blog, .section-about, .section-skill {
-  inline-size: 100%;
-  min-block-size: 100vh;
-  padding-block-start: 72px;
-  padding-inline: 32px;
-}
-@media only screen and (min-width: 768px) {
-  .section-project, .section-post, .section-blog, .section-about, .section-skill {
-    padding-inline: 48px;
+@media only screen and (min-width: 600px) {
+  .section-post, .section-blog, .section-project, .section-about, .section-skill, .main, .nav {
+    inline-size: 85%;
   }
 }
-@media only screen and (min-width: 1024px) {
-  .section-project, .section-post, .section-blog, .section-about, .section-skill {
-    padding-inline: 64px;
+@media only screen and (min-width: 992px) {
+  .section-post, .section-blog, .section-project, .section-about, .section-skill, .main, .nav {
+    inline-size: 70%;
   }
 }
 
@@ -271,7 +256,7 @@
   color: #ffffff;
 }
 
-.card-project--title, .blog-entry, .menu-link, .about a, .contact-me a, .nav-icon a {
+.blog-entry, .card-project--title, .menu-link, .about a, .contact-me a, .nav-icon a {
   text-decoration: none;
 }
 
@@ -281,10 +266,15 @@
 
 .body {
   background: #1d1d1d;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .nav {
   display: grid;
+  grid-template-columns: repeat(4, 4fr);
+  column-gap: 32px;
   position: fixed;
   z-index: 100;
   top: 0;
@@ -292,7 +282,7 @@
   block-size: 72px;
   background: rgba(0, 0, 0, 0);
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .nav {
     grid-template-columns: repeat(4, 4fr);
     margin: 0 48px;
@@ -359,10 +349,14 @@
 
 .main {
   display: grid;
+  grid-template-columns: repeat(4, 4fr);
+  padding-inline: 32px;
+  column-gap: 32px;
+  grid-template-rows: repeat(7, 1fr);
+  padding-block-start: 72px;
+  row-gap: 32px;
   position: relative;
-  inline-size: 100%;
-  block-size: 100vh;
-  background-color: #1d1d1d;
+  min-block-size: 100vh;
 }
 
 .main-subtitle {
@@ -379,17 +373,6 @@
   color: #ffffff;
 }
 
-/* .section-main {
-    display: flex;
-    flex-direction: column;
-
-    inline-size: 100%;
-    min-block-size: 100vh;
-    padding-block-start: var.$height-nav;
-    padding-inline: var.$margin-grid-mobile;
-
-    background-color: var.$color-dark;
-} */
 .section-main-title {
   margin-block-end: 24px;
 }
@@ -409,7 +392,7 @@
   block-size: 100%;
   display: grid;
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 992px) {
   .subsection-skill {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -468,7 +451,7 @@
   padding-inline: 32px;
   background: #1d1d1d;
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 992px) {
   .menu {
     display: flex;
     justify-content: space-around;
@@ -483,7 +466,7 @@
   block-size: 50%;
   padding-block-end: 48px;
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 992px) {
   .menu-list {
     place-self: center;
   }
@@ -499,7 +482,7 @@
   text-align: right;
   block-size: 50%;
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 992px) {
   .menu-contact {
     place-self: center;
   }
@@ -543,11 +526,96 @@
   margin-block-end: 24px;
 }
 
+.section-about {
+  padding-block-start: 72px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project-container {
+  display: grid;
+  row-gap: 24px;
+  justify-content: center;
+}
+@media only screen and (min-width: 600px) {
+  .project-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media only screen and (min-width: 992px) {
+  .project-container {
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 48px;
+  }
+}
+
+.card-project {
+  inline-size: 300px;
+  block-size: 240px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.card--info {
+  position: absolute;
+  z-index: 100;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.card-project--title {
+  margin-block-end: 12px;
+}
+
+.card-project__info--about {
+  font-weight: lighter;
+  font-size: 14px;
+  margin-block-end: 12px;
+}
+
+.card-project-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 50;
+  block-size: 100%;
+  inline-size: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.card-project img {
+  min-block-size: 240px;
+  min-inline-size: 300px;
+  inline-size: auto;
+  block-size: 100%;
+  object-fit: cover;
+}
+
+.modal {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  inline-size: 100vw;
+  min-block-size: 100vh;
+}
+
+footer {
+  block-size: 72px;
+}
+
 .music {
   inline-size: 100%;
   min-block-size: 100vh;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .music {
     padding-block-start: 72px;
     padding-inline: 48px;
@@ -555,7 +623,7 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 992px) {
   .music {
     padding-inline: 64px;
   }
@@ -577,7 +645,7 @@
   grid-row: 6/7;
   place-self: center;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .music-hero-title {
     display: none;
   }
@@ -588,7 +656,7 @@
   padding-inline: 32px;
   overflow: hidden;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .music-songs {
     block-size: 310px;
   }
@@ -605,7 +673,7 @@
 .music-title {
   display: none;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .music-title {
     display: block;
     text-align: center;
@@ -666,7 +734,7 @@
   block-size: 125px;
   margin-block-end: 24px;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .blog-entry {
     min-block-size: 250px;
     grid-template-columns: minmax(100px, 150px) 1fr;
@@ -674,7 +742,7 @@
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .blog-title {
     grid-column: 2/3;
   }
@@ -683,7 +751,7 @@
 .blog-extract {
   text-align: center;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .blog-extract {
     grid-column: 2/3;
     text-align: start;
@@ -693,7 +761,7 @@
 .blog-date {
   text-align: right;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .blog-date {
     grid-column: 1/2;
     grid-row: 1/2;
@@ -702,7 +770,7 @@
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .post {
     display: grid;
     grid-template-columns: minmax(100px, 150px) minmax(300px, 750px);
@@ -715,7 +783,7 @@
   margin-block-end: 24px;
   margin-block-start: 12px;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .post-title {
     grid-column: 2/3;
     align-self: center;
@@ -726,13 +794,13 @@
   text-align: center;
   margin-block-end: 24px;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .post-extract {
     grid-column: 2/3;
     margin-block-end: 48px;
   }
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 992px) {
   .post-extract {
     margin-block-start: 48px;
     margin-block-end: 72px;
@@ -742,7 +810,7 @@
 .post-date {
   text-align: right;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .post-date {
     text-align: initial;
     grid-column: 1/2;
@@ -754,7 +822,7 @@
   margin-block-end: 24px;
   max-inline-size: 600px;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .post-text {
     grid-column: 2/3;
   }
@@ -767,12 +835,12 @@
   row-gap: 5px;
   inline-size: 100%;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   .section-audiovisual {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 992px) {
   .section-audiovisual {
     grid-template-columns: repeat(3, 1fr);
   }
@@ -785,70 +853,5 @@
 .img-container img {
   inline-size: 100%;
   block-size: auto;
-  object-fit: cover;
-}
-
-.project-container {
-  display: grid;
-  row-gap: 24px;
-  justify-content: center;
-}
-@media only screen and (min-width: 768px) {
-  .project-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media only screen and (min-width: 1024px) {
-  .project-container {
-    grid-template-columns: repeat(3, 1fr);
-    row-gap: 48px;
-  }
-}
-
-.card-project {
-  inline-size: 300px;
-  block-size: 240px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  overflow: hidden;
-}
-
-.card--info {
-  position: absolute;
-  z-index: 100;
-  top: 50%;
-  transform: translateY(-50%);
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}
-
-.card-project--title {
-  margin-block-end: 12px;
-}
-
-.card-project__info--about {
-  font-weight: lighter;
-  font-size: 14px;
-  margin-block-end: 12px;
-}
-
-.card-project-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 50;
-  block-size: 100%;
-  inline-size: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.card-project img {
-  min-block-size: 240px;
-  min-inline-size: 300px;
-  inline-size: auto;
-  block-size: 100%;
   object-fit: cover;
 }
