--- a/src/pug/component/project.pug
+++ b/src/pug/component/project.pug
@@ -1,17 +1,21 @@
 mixin card-project(title, image, projectUrl)
-    .modal
-        .modal-content
+    .card
+        .modal
             h1 #{title}
+            .modal-image-container
+                img(src="/projects/mercado-libre-home/screenshoots/mercado-libre-home-1.png", alt="screenshoots aps")
             p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
-    .card-project
-        img(src=`/img/project/${image}.jpg` alt='project image')
-        .card--info
-            a(href=`${projectUrl}`).card-project--title #{title} 
-            span.card-project__info--about about the project
-        .card-project-overlay 
+        .card-project
+            img(src=`/img/project/${image}.jpg` alt='project image')
+            .card--info
+                a(href=`${projectUrl}`).card-project--title #{title} 
+                span.card-project__info--about about the project
+            .card-project-overlay 
+            .hastaelfondo
 
 section.section-project
     h1.section-main-title Projects
     .project-container
         +card-project('arielestebansoto.com', '1', '/index.html')
         +card-project('Mercado Libre Home', 'mercadolibre', '/projects/mercado-libre-home/index.html')
+        +card-project('Breaking Bad API', 'breakingbad', '/projects/breaking-bad-api/index.html')
